Fix map height on iPhone

--- a/css/garcrogo.css
+++ b/css/garcrogo.css
@@ -524,7 +524,7 @@ ul {
 .contact-col {
     width: 50%;
     display: table-cell;
-    position: relative;
+    vertical-align: top;
 }
 
 .contact-col > .heading2 {
@@ -536,7 +536,6 @@ ul {
 }
 
 .contact-map {
-    position: absolute;
     width: 100%;
     height: 100%;
     border: none;
